--- a/sql-practices.yml
+++ b/sql-practices.yml
@@ -4,5 +4,5 @@ channels:
 dependencies:
   - pip=23.3.1=py38hecd8cb5_0
   - python=3.8.18=h5ee71fb_0
-  - psycopg2-binary=2.9.9
-  - pymysql=1.1.0
+  # - psycopg2-binary
+  - pymysql
